check_output.txt
warning: unused variable: `k`
   --> memory\src\heap.rs:174:34
    |
174 | ...                   for (k, v) in m.iter() {
    |                            ^ help: if this is intentional, prefix it with an underscore: `_k`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `memory` (lib) generated 1 warning
    Checking achronyme-parser v0.7.0 (C:\apache\htdocs\achronyme-core\achronyme-parser)
error: proc-macro derive panicked
 --> achronyme-parser\src\lib.rs:7:10
  |
7 | #[derive(Parser)]
  |          ^^^^^^
  |
  = help: message: error parsing 
            --> 56:1
             |
          56 | }
             | ^---
             |
             = expected expression

error[E0412]: cannot find type `Rule` in this scope
  --> achronyme-parser\src\lib.rs:11:88
   |
11 | pub fn parse_expression(input: &str) -> std::result::Result<pest::iterators::Pairs<'_, Rule>, pest::error::Error<Rule>> {
   |                                                                                        ^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
11 | pub fn parse_expression<Rule>(input: &str) -> std::result::Result<pest::iterators::Pairs<'_, Rule>, pest::error::Error<Rule>> {
   |                        ++++++

error[E0412]: cannot find type `Rule` in this scope
  --> achronyme-parser\src\lib.rs:11:114
   |
11 | pub fn parse_expression(input: &str) -> std::result::Result<pest::iterators::Pairs<'_, Rule>, pest::error::Error<Rule>> {
   |                                                                                                                  ^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
11 | pub fn parse_expression<Rule>(input: &str) -> std::result::Result<pest::iterators::Pairs<'_, Rule>, pest::error::Error<Rule>> {
   |                        ++++++

error[E0599]: no function or associated item named `parse` found for struct `AchronymeParser` in the current scope
  --> achronyme-parser\src\lib.rs:12:38
   |
 9 | pub struct AchronymeParser;
   | -------------------------- function or associated item `parse` not found for this struct
...
12 |     let mut pairs = AchronymeParser::parse(Rule::program, input)?;
   |                                      ^^^^^ function or associated item not found in `AchronymeParser`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `parse`, perhaps you need to implement it:
           candidate #1: `Parser`

error[E0433]: failed to resolve: use of undeclared type `Rule`
  --> achronyme-parser\src\lib.rs:12:44
   |
12 |     let mut pairs = AchronymeParser::parse(Rule::program, input)?;
   |                                            ^^^^ use of undeclared type `Rule`

Some errors have detailed explanations: E0412, E0433, E0599.
For more information about an error, try `rustc --explain E0412`.
error: could not compile `achronyme-parser` (lib) due to 5 previous errors
